[gd_scene load_steps=9 format=3 uid="uid://sf7b1131oafk"]

[ext_resource type="Texture2D" uid="uid://bjkro47fehoqt" path="res://textures/jeremy.png" id="1_dno8a"]
[ext_resource type="Script" path="res://assets/player.gd" id="1_lsgr5"]
[ext_resource type="PackedScene" uid="uid://cswp0frmpubcb" path="res://assets/ghost.tscn" id="2_02nky"]
[ext_resource type="Texture2D" uid="uid://cqcmxxlidobqi" path="res://textures/hpCont.png" id="4_iahwj"]
[ext_resource type="Texture2D" uid="uid://kkmbfyl51kg2" path="res://textures/dashMeterEmpty.png" id="5_o0yxg"]
[ext_resource type="Texture2D" uid="uid://ch2437ry0dr8t" path="res://textures/dashMeterFull.png" id="6_t65ht"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ukbg7"]
size = Vector2(10, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2rtf"]
size = Vector2(12, 16)

[node name="player" type="CharacterBody2D" groups=["player"]]
light_mask = 5
visibility_layer = 5
collision_layer = 5
script = ExtResource("1_lsgr5")
ghost_node = ExtResource("2_02nky")
maxSPEED = 90.0
JUMP_VELOCITY = -180.0
acceleration = 80

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_dno8a")

[node name="collsion" type="CollisionShape2D" parent="." groups=["player"]]
light_mask = 5
visibility_layer = 5
shape = SubResource("RectangleShape2D_ukbg7")

[node name="cooldown" type="Timer" parent="."]
one_shot = true

[node name="dashingTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="sprite2" type="Sprite2D" parent="."]
scale = Vector2(0.9, 0.9)

[node name="hitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="collision" type="CollisionShape2D" parent="hitBox"]
shape = SubResource("RectangleShape2D_d2rtf")

[node name="knockbackTime" type="Timer" parent="."]
wait_time = 0.05

[node name="camera" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 9.0
rotation_smoothing_speed = 1.0

[node name="hp" type="Sprite2D" parent="camera"]
unique_name_in_owner = true
position = Vector2(-80, -40)
texture = ExtResource("4_iahwj")
hframes = 5

[node name="dash_meter" type="TextureProgressBar" parent="camera"]
visible = false
offset_left = -88.0
offset_top = -31.0
offset_right = -72.0
offset_bottom = -15.0
step = 0.1
rounded = true
allow_greater = true
allow_lesser = true
fill_mode = 3
texture_under = ExtResource("5_o0yxg")
texture_progress = ExtResource("6_t65ht")

[connection signal="dash_added" from="." to="." method="_on_dash_added"]
[connection signal="body_shape_entered" from="hitBox" to="." method="_on_hit_box_body_shape_entered"]
[connection signal="timeout" from="knockbackTime" to="." method="_on_knockback_time_timeout"]
